@@ -1,3 +1,8 @@
+2013-01-18  Frank Warmerdam  <warmerdam@google.com>
+
+	* libtiff/tif_read.c: uint64/tmsize_t change for MSVC warnings.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2427
+
 2012-12-20  Tom Lane  <tgl@sss.pgh.pa.us>
 
 	* test/raw_decode.c: Relax raw_decode's pixel-value checks so that
